# celestia-zk-da-challenge

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  deployment-guide.md  docker-compose.yml  run-local-test.sh
.github/workflows/: checks.yml
apps/: Cargo.toml
ci/: docker-compose.yml
ci/celestia-config/blobstream0/: entrypoint.sh
contracts/script/: DeployCounter.s.sol  DeployVerifier.s.sol  DeployVerifierReal.s.sol
contracts/src/: Counter.sol  MockBlobstream.sol  MockGateway.sol  Verifier.sol
crates/apps/: Cargo.toml  README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: blobstream_data_commitment.rs  lib.rs
crates/e2e-tests/: Cargo.toml  test_bad_challenges.rs  test_deployment.rs  test_valid_challenges.rs  test_valid_index.rs
crates/e2e-tests/fixtures/: mod.rs
crates/host/: Cargo.toml
crates/methods/: Cargo.toml  build.rs
crates/methods/guest/: Cargo.toml
crates/test-toolkit/: Cargo.toml
crates/test-toolkit/src/: blobstream.rs  contracts.rs  index_blob.rs  lib.rs  test_env.rs
crates/toolkit/: Cargo.toml
crates/toolkit/src/: blobstream.rs  constants.rs  errors.rs  journal.rs  lib.rs
e2e-tests/: Cargo.toml  test_deployment.rs  test_valid_index.rs
e2e-tests/fixtures/: mod.rs
methods/: build.rs
methods/guest/: Cargo.toml
scripts/: clippy-guest.sh  run-tests.sh
test/: run-local-test.sh
test-toolkit/: Cargo.toml
test-toolkit/src/: blobstream.rs  contracts.rs  index_blob.rs  lib.rs
toolkit/src/: blobstream.rs  constants.rs  journal.rs
