[workspace]
resolver = "2"
members = ["crates/host", "crates/methods", "crates/e2e-tests", "crates/test-toolkit", "crates/toolkit"]
exclude = ["lib", "crates/methods/guest"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Intra-workspace dependencies
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0" }

# risc0 monorepo dependencies.
risc0-build = { version = "2.0", features = ["docker"] }
risc0-zkvm = { version = "2.0", features = ["unstable"] }
risc0-zkp = { version = "2.0", default-features = false }

alloy = { version = "0.12", features = ["full", "provider-anvil-node"] }
alloy-primitives = { version = "0.8", features = ["rlp", "serde", "std"] }
alloy-contract = { version = "0.12.6" }
alloy-sol-types = { version = "0.8" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
celestia-rpc = { git = "https://github.com/Eclipse-Laboratories-Inc/lumina", rev = "90384f5302d0dc677ac3e8c00db7c229a27aa4a1" }
celestia-types = { git = "https://github.com/Eclipse-Laboratories-Inc/lumina", rev = "90384f5302d0dc677ac3e8c00db7c229a27aa4a1" }
clap = { version = "4.5" }
dotenv = { version = "0.15.0" }
futures-util = { version = "0.3.31" }
hana-blobstream = { git = "https://github.com/Eclipse-Laboratories-Inc/hana", branch = "od/fix-deps-and-add-traits" }
hana-proofs = { git = "https://github.com/Eclipse-Laboratories-Inc/hana", branch = "od/fix-deps-and-add-traits" }
hex = { version = "0.4" }
da-bridge-methods = { path = "./crates/methods" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive", "std"] }
test-toolkit = { path = "crates/test-toolkit" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.39", features = ["full"] }
toolkit = { path = "./crates/toolkit" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }

[patch.crates-io]
# enable RISC Zero's precompiles
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }

[profile.release]
debug = 1
lto = true
