[package]
name = "e2e-tests"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dev-dependencies]
alloy = { workspace = true }
once_cell = "1.21.3"
rstest = "0.25"
tokio = { workspace = true }

[[test]]
name = "test-deployment"
path = "test_deployment.rs"
[dependencies]
once_cell = "1.21.3"
