[package]
name = "e2e-tests"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dev-dependencies]
alloy = { workspace = true }
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
rstest = "0.25"
tokio = { workspace = true }

[[test]]
name = "test-deployment"
path = "test_deployment.rs"
