[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenv = { workspace = true }
da-bridge-methods = { workspace = true }
hex = { workspace = true }
hana-blobstream = { workspace = true }
hana-proofs = { workspace = true }
log = { workspace = true }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0", features = ["host"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
itertools = "0.14.0"
rangemap = "1.5.1"

[features]
history = ["risc0-steel/unstable-history"]
beacon = []
