[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenv = { workspace = true }
da-challenge-guest = { workspace = true }
futures-util = { workspace = true }
hana-blobstream = { workspace = true }
hana-proofs = { workspace = true }
itertools = "0.14.0"
log = { workspace = true }
rangemap = "1.5.1"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-2.0", features = ["host"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"

[features]
history = ["risc0-steel/unstable-history"]
beacon = []
